modified:   package-lock.json modified:   package.json

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
+    "react-paypal-button": "^4.1.1",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
   }
